# nmrkit

./: pyproject.toml
.github/workflows/: python-publish.yml
nmrkit/: __init__.py
nmrkit/io/formats/: delta.py
nmrkit/processing/: __init__.py  phase.py
nmrkit/processing/workflows/: basic_1d.py  basic_2d.py
tests/processing/: test_baseline.py  test_phase.py
